# squirrel-plugin

./: README.md  aclocal.m4  configure  configure.ac
slurm/src/plugins/sched/: Makefile.am
slurm/src/plugins/sched/squirrel/: squirrel.c  squirrel.h  squirrel_wrapper.c
src/plugins/sched/: Makefile.am  Makefile.in
src/plugins/sched/squirrel/: Makefile.am  Makefile.in  squirrel.c  squirrel_wrapper.c
